--- a/SportsStore/SportsStore.WebUI/Content/Admin.css
+++ b/SportsStore/SportsStore.WebUI/Content/Admin.css
@@ -41,3 +41,17 @@ font-weight:bold;color:red;
 .validation-summary-valid {
 display:none;
 }
+
+.editor-field {
+margin-bottom:.8em;
+}
+.editor-label {
+font-weight:bold;
+}
+    .editor-label:after {
+    content:":";
+    }
+    .text-box{width:25em;}
+    .multi-line{height:5em;font-family:Segoe UI,Verdana;}
+
+
