Sports Store Practise Content is complete, next is the detail in this project

--- a/SportsStore/SportsStore.WebUI/Views/Admin/Index.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Admin/Index.cshtml
@@ -26,7 +26,7 @@
         <td>
             @using (Html.BeginForm("Delete", "Admin"))
             {
-                @Html.Hidden("ProductID",item.ProductID)
+                @Html.Hidden("P_ProductID",item.ProductID)
                 <input type="submit" value="Delete" />
             }
             </td >
