--- a/UrlsAndRoutes/UrlsAndRoutes/Views/Shared/ActionName.cshtml
+++ b/UrlsAndRoutes/UrlsAndRoutes/Views/Shared/ActionName.cshtml
@@ -13,5 +13,14 @@
 <body>
     <div>The controller is: @ViewBag.Controller</div>
     <div>The action is: @ViewBag.Action</div>
+    @*<div>
+        @Html.ActionLink("This is an outgoing URL", "CustomVariable")
+    </div>*@
+    <div>
+        @Html.ActionLink("This is an outgoing URL", "CustomVariable",new { id="Hello"})
+    </div>
+    <div>
+        @Html.ActionLink("This targets another controller", "Index", "Admin")
+    </div>
 </body>
 </html>
