--- a/UrlsAndRoutes/UrlsAndRoutes/Views/Shared/ActionName.cshtml
+++ b/UrlsAndRoutes/UrlsAndRoutes/Views/Shared/ActionName.cshtml
@@ -14,13 +14,34 @@
     <div>The controller is: @ViewBag.Controller</div>
     <div>The action is: @ViewBag.Action</div>
     @*<div>
-        @Html.ActionLink("This is an outgoing URL", "CustomVariable")
+            @Html.ActionLink("This is an outgoing URL", "CustomVariable")
+        </div>*@
+
+    @*<div>
+            @Html.ActionLink("This targets another controller", "OutgoingUrlRedirect", "Admin")
+        </div>*@
+
+    @*<div>
+            @Html.ActionLink("This is an outgoing URL", "CustomVariable", new { id = "Hello" })
+        </div>*@
+
+    @*<div>
+            @Html.ActionLink("Click me", "OutgoingUrlRedirect", "Admin", new { page = 123 },null)
+        </div>*@
+
+    @*<div>
+            @Html.ActionLink("This is an outgoing URL", "Index", "Home",null, new { id="myAnchorID",@class="myCssClass"})
+        </div>*@
+
+    @*<div>
+        @Html.ActionLink("This is an outgoing URL", "Index", "Home"
+       ,"https","myserver.mydomain.com"," myFragmentName"
+       , new { id="MyID"},new { id = "myAnchorID", @class = "myCssClass" })
     </div>*@
+
     <div>
-        @Html.ActionLink("This is an outgoing URL", "CustomVariable",new { id="Hello"})
+        This is a URL: @Url.Action("Index","Home",new { id="MyID"})
     </div>
-    <div>
-        @Html.ActionLink("This targets another controller", "Index", "Admin")
-    </div>
+
 </body>
 </html>
